--- a/PassDataC1/Base.lproj/Main.storyboard
+++ b/PassDataC1/Base.lproj/Main.storyboard
@@ -65,16 +65,34 @@
             </objects>
             <point key="canvasLocation" x="694" y="396"/>
         </scene>
-        <!--View Controller-->
+        <!--Product Detail View Controller-->
         <scene sceneID="j4v-a1-yIZ">
             <objects>
-                <viewController id="YNK-iE-NcR" sceneMemberID="viewController">
+                <viewController id="YNK-iE-NcR" customClass="ProductDetailViewController" customModule="PassDataC1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uLo-TT-5tk">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iUH-1X-TIU">
-                                <rect key="frame" x="66" y="136" width="42" height="21"/>
+                                <rect key="frame" x="71" y="84" width="179" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4dH-ub-04Z">
+                                <rect key="frame" x="20" y="260" width="280" height="133"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="lji-6u-h0O">
+                                <rect key="frame" x="40" y="119" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="FLj-8V-RCy">
+                                <rect key="frame" x="115" y="392" width="130" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -84,6 +102,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="azz-QE-zxM"/>
+                    <connections>
+                        <outlet property="imageViewProduct" destination="lji-6u-h0O" id="sOW-h1-gIW"/>
+                        <outlet property="lblDesc" destination="4dH-ub-04Z" id="hww-n2-MRp"/>
+                        <outlet property="lblPrice" destination="FLj-8V-RCy" id="waG-eJ-I4y"/>
+                        <outlet property="lblTitle" destination="iUH-1X-TIU" id="MWb-Mb-oYh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cv3-SX-4Vc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
