--- a/PassDataC1/Base.lproj/Main.storyboard
+++ b/PassDataC1/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="694" y="396"/>
+            <point key="canvasLocation" x="747" y="396"/>
         </scene>
         <!--Product Detail View Controller-->
         <scene sceneID="j4v-a1-yIZ">
@@ -146,7 +146,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell1" rowHeight="100" id="QHS-K2-woO">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell1" rowHeight="100" id="QHS-K2-woO" customClass="CustomCartTableViewCell" customModule="PassDataC1" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="92" width="320" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QHS-K2-woO" id="63q-B9-bFw">
@@ -165,14 +165,27 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4Qq-2b-2QI">
-                                                    <rect key="frame" x="244" y="70" width="68" height="21"/>
+                                                    <rect key="frame" x="244" y="29" width="68" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" id="nQz-0p-cou">
+                                                    <rect key="frame" x="218" y="58" width="94" height="29"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="AddQty:" destination="QHS-K2-woO" eventType="valueChanged" id="QWf-c8-IR5"/>
+                                                    </connections>
+                                                </stepper>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imageViewProduct" destination="pvG-L3-ym1" id="cgh-Ma-ULn"/>
+                                            <outlet property="lblName" destination="hQE-9P-Hxf" id="LCy-Bh-bff"/>
+                                            <outlet property="lblQty" destination="4Qq-2b-2QI" id="9G0-jD-EbN"/>
+                                            <outlet property="stepperQty" destination="nQz-0p-cou" id="Xds-hk-pl3"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -205,7 +218,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Kt-PJ-GqZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="293" y="396"/>
+            <point key="canvasLocation" x="373" y="396"/>
         </scene>
     </scenes>
 </document>
